--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -3,4 +3,4 @@ project(pixelflut_filler C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(pixelflut_filler main.c)
+add_executable(pixelflut_filler main.c color.h color.c window.h window.c)
